--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -29,17 +29,18 @@ run \
     --package boolean_threshold_network \
     --release \
     -- \
-    -n 500000 \
+    -n 50 \
     -k 2.1 \
+    --out-degree-distribution homogeneous \
     --num-steps 0 \
     --network-seed 0 \
     --num-networks 100 \
     --num-initial-conditions 0 \
     --dynamics-seed 0 \
-    --num-drugs 0 \
+    --num-drugs 1 \
     --num-targets-per-drug 0 \
     --drug-strength .25 \
     --drug-seed 0 \
-    --tag v0.1.3 \
+    --tag v0.1.4 \
     --output-directory data \
 """
