--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ prost = "0.13"
 # Only necessary if using Protobuf well-known types:
 prost-types = "0.13"
 rootfinder = "0.3.2"
+glob = "0.3.2"
+itertools = "0.14.0"
+average = "0.16.0"
+csv = "1.3.1"
+log = "0.4.27"
 
 [profile.release]
 lto = true
