--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ itertools = "0.14.0"
 average = "0.16.0"
 csv = "1.3.1"
 log = "0.4.27"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [profile.release]
 lto = true
